--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
+    "@dynamic-labs/ethereum": "^0.18.27",
+    "@dynamic-labs/sdk-react-core": "^0.18.27",
     "@headlessui/react": "^1.7.15",
     "@headlessui/tailwindcss": "^0.2.0",
     "@tailwindcss/forms": "^0.5.3",
